vlib/v/checker/tests/globals/incorrect_name_global.out
vlib/v/checker/tests/globals/incorrect_name_global.v:1:1: error: global name `A` cannot contain uppercase letters, use snake_case instead
    1 | __global A int = 1
      | ~~~~~~~~~~
